# collected-mind

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
pipeline/: config.py  db.py  export.py  stats.py  util.py
pipeline/cluster/: run.py
pipeline/edges/: run.py
pipeline/embed/: run.py
pipeline/enrich/: prompt.py  run.py  schema.py
pipeline/quotes/: llm.py  run.py  wikiquote.py
pipeline/scrape/: extract.py  run.py  sources.py  wiki.py
tests/: test_cluster.py  test_quotes.py
web/: .gitignore  next.config.ts  package-lock.json  package.json  vitest.config.ts
web/public/data/: clusters.json  concepts.json  edges.json  embeddings_meta.json  quotes.json  search.json  tags.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/advise/: page.tsx
web/src/app/api/advise/: route.ts
web/src/app/api/corpus/: route.ts
web/src/app/api/log/: route.ts
web/src/app/api/mcp/: route.ts
web/src/app/browse/: page.tsx
web/src/app/c/[slug]/: page.tsx
web/src/app/favorites/: page.tsx
web/src/app/history/: page.tsx
web/src/app/search/: page.tsx
web/src/components/: Advisor.tsx  Badge.tsx  Browser.tsx  ConceptCard.tsx  DailyPicks.tsx  EgoGraph.tsx  History.tsx  Reactions.tsx  RecentMindBlown.tsx  Search.tsx  SignalButtons.tsx
web/src/lib/: data.ts  egoGraph.ts  labels.ts  picker.ts  signals.ts  types.ts
web/src/lib/advisor/: corpus.ts  embed.ts  log.ts  prompt.ts  tools.ts
web/src/lib/corpus/: api.ts  retrieval.ts
web/src/lib/dismissed/: store.ts
web/src/lib/favorites/: store.ts
(+29 files in other folders)
