[project]
name = "collected-mind-pipeline"
version = "0.1.0"
description = "Scrape, enrich, and embed concepts from Wikipedia."
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests>=2.32",
    "openai>=1.55",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "pydantic>=2.9",
    "numpy>=2.0",
    "tenacity>=9.0",
    "mwparserfromhell>=0.6",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.7", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
